--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:text="login" />
 
-    <TextView
+    <EditText
         android:id="@+id/loginInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
