Add inputType email to login input

--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -10,6 +10,7 @@
         android:text="login" />
 
     <EditText
+        android:inputType="textEmailAddress"
         android:id="@+id/loginInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
