--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:text="password" />
 
-    <TextView
+    <EditText
         android:id="@+id/passwordInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
