--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -26,6 +26,7 @@
 
     <Button
         android:id="@+id/loginButton"
+        android:text="@string/login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
