Show empty email error

--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -8,6 +8,12 @@
         android:layout_height="wrap_content"
         android:text="@string/email_header" />
 
+    <TextView
+        android:id="@+id/emptyEmailError"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/empty_email_error" />
+
     <EditText
         android:id="@+id/emailInput"
         android:layout_width="wrap_content"
