--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -24,6 +24,12 @@
         android:layout_height="wrap_content"
         android:text="@string/password_header" />
 
+    <TextView
+        android:id="@+id/emptyPasswordError"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/empty_password_error" />
+
     <EditText
         android:id="@+id/passwordInput"
         android:layout_width="wrap_content"
