--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -28,7 +28,8 @@
         android:id="@+id/emptyPasswordError"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/empty_password_error" />
+        android:text="@string/empty_password_error"
+        android:visibility="gone" />
 
     <EditText
         android:id="@+id/passwordInput"
