--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -15,5 +15,11 @@
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/password_header"/>
+
+
 </LinearLayout>
 
