should_password_input_has_type_password

--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -24,7 +24,7 @@
     <EditText
         android:id="@+id/passwordInput"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textEmailAddress" />
+        android:inputType="textPassword"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
 
