--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -20,6 +20,12 @@
         android:layout_height="wrap_content"
         android:text="@string/password_header"/>
 
+    <EditText
+        android:id="@+id/passwordInput"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword" />
+
 
 </LinearLayout>
 
