--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -27,6 +27,7 @@
         android:inputType="textPassword" />
 
     <Button
+        android:id="@+id/loginButton"
         android:layout_gravity="center"
         android:layout_margin="8dp"
         android:layout_width="wrap_content"
