--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -27,7 +27,8 @@
         android:inputType="textPassword"
         android:layout_height="wrap_content"/>
 
-    <ProgressBar
+    <TextView
+        android:text="Loading..."
         android:id="@+id/loader"
         android:visibility="gone"
         android:layout_width="wrap_content"
