Should show loader on login button test

--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -32,5 +32,13 @@
         android:layout_height="wrap_content"
         android:onClick="doLogin"/>
 
+
+    <TextView
+        android:id="@+id/loadingBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/loading"
+        android:visibility="gone"/>
+
 </LinearLayout>
 
